syntax = "proto3";

import "meta/header.proto";
import "user/role.proto";

option go_package = "github.com/ilyatos/aac-task-tracker/schema_registry/pkg/user/role_changed";

package role_changed;

message UserRoleChanged {
  header.Header header = 1;
  oneof payload {
    V1 v1 = 2;
  }
}

message V1 {
  string public_id = 1;
  user.Role role = 2;
}
